@@ -137,6 +137,7 @@ Cacti CHANGELOG
 -issue#5403: Cacti Log regular expression filters can not calculate 'does not match' properly
 -issue#5413: Rows Per Page - Not all options are available
 -issue#5414: Plugins are unable to modify fields in the setting 'Change Device Settings'
+-issue#5417: Cacti mailer log message misses 'bcc' addresses in log notification
 -feature#5375: Add template for Fortinet firewall and Aruba Instant cluster
 -feature#5393: Add template for SNMP printer
 -feature: Update Cisco Device Template to include HSRP graph template
